<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ResourceName">
    <string name="pick_location">Fetching Current Location</string>
    <string name="enter_drop_location">Enter Drop Location</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="location_permission_rationale">Location Permission is needed to get current location</string>
    <string name="daily_ride">Daily Ride</string>
    <string name="get_pricing">GET PRICING</string>
    <string name="amount">Amount</string>
    <string name="tips_amount_label">Enter the amount for tips</string>
    <string name="extend_trip_msg">Are you sure want update the destination location</string>
    <string name="cancel_request_confirm_msg">Are you sure want to cancel the request?</string>
    <string name="location_text">Location</string>
    <string name="payment_type">Payment Type</string>
    <string name="drop_location">Drop Location</string>
    <string name="saved_locations">Saved Locations</string>
    <string name="home">Home</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="enter_details">Enter the Details</string>
    <string name="work">Work</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="change">CHANGE</string>
    <string name="_0_mins">0 mins</string>
    <string name="service_name">Service Name</string>
    <string name="price_estimation">Price Estimation</string>
    <string name="select_date_and_time">Select date and time</string>
    <string name="estimated_fare">Estimated Fare</string>
    <string name="eta">ETA</string>
    <string name="model">Model</string>
    <string name="wheel_chair">Wheel Chair</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="child_sheet">Child Sheet</string>
    <string name="booked_for_someone">Booked for Someone</string>
    <string name="use_wallet_amount">Use wallet amount</string>
    <string name="coupon">Coupon</string>
    <string name="view_coupon">VIEW COUPON</string>
    <string name="due_to_high_demand_price_may_vary">Due to high demand price may vary</string>
    <string name="schedule_now">SCHEDULE NOW</string>
    <string name="ride_now">RIDE NOW</string>
    <string name="back">Back</string>
    <string name="cancel_request">CANCEL REQUEST</string>
    <string name="finding_drivers_near_by">Finding drivers near by...</string>
    <string name="taxi_status">Status</string>
    <string name="taxi_dummy_status_driver_accepted_your_request">Driver accepted your request</string>
    <string name="taxi_due_to_peak_hours_charges_are_based_on_providers_navailability">Due to peak hours, charges are based on providers availability</string>
    <string name="taxi_cancel">CANCEL</string>
    <string name="taxi_share">Share</string>
    <string name="taxi_share_ride_text">Check this Ride</string>
    <string name="invoice">Invoice</string>
    <string name="taxi_invoice_confirm">CONFIRM</string>
    <string name="taxi_source_and_destination">Source and Destination</string>
    <string name="taxi_booking_id">Booking ID</string>
    <string name="taxi_distance_travelled">Distance Travelled</string>
    <string name="taxi_time_taken">Time Taken</string>
    <string name="taxi_invoice_base_fare">Base Fare</string>
    <string name="taxi_invoice_distance_fare">Distance Fare</string>
    <string name="taxi_discount_fare">Discount</string>
    <string name="taxi_waiting_fare">Waiting Fare</string>
    <string name="taxi_toll_fare">Toll Charges</string>
    <string name="taxi_invoice_tax">Tax</string>
    <string name="taxi_add_tips">ADD</string>
    <string name="taxi_invoice_total">Total</string>
    <string name="taxi_invoice_payment_via">Payment via</string>
    <string name="taxi_payment_change">Change</string>
    <string name="taxi_leave_your_comments">Leave your comments</string>
    <string name="taxi_rating_submit">Submit</string>
    <string name="taxi_rating_rate_your_driver">Rate your driver</string>
    <string name="taxi_schedule_ride">Your Schedule on</string>
    <string name="taxi_cancel_schedule_ride">Are you sure want delete the schedule ride?</string>
    <string name="taxi_sos">SOS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="book_for_someone">Book for Someone</string>
    <string name="taxi_bookforsomeone_name">Name</string>
    <string name="taxi_bookforsomeone_ph_number">Phone Number</string>
    <string name="taxi_bookforsomeone_email">Email(optional)</string>
    <string name="taxi_bookforsomeone_submit">Submit</string>
    <string name="taxi_coupon">Coupon</string>
    <string name="tips_add">Add</string>
    <string name="taxi_coupon_code_use_this">USE THIS</string>
    <string name="taxi_rate_card_fare_km">Distance Fare</string>
    <string name="taxi_schedule_your_date_and_time">Schedule Your Date and Time</string>
    <string name="calendar">Calendar</string>
    <string name="taxi_schedule_request">SCHEDULE REQUEST</string>
    <string name="taxi_schedule_date">Date</string>
    <string name="taxi_schedule_time">Time</string>
    <string name="taxi_choose_date">Choose Date</string>
    <string name="taxi_choose_time">Choose Time</string>
    <string name="taxi_demand_1_1x">1.1x</string>
    <string name="taxi_tips">Tips</string>
    <string name="taxi_rate_card_done">DONE</string>
    <string name="taxi_fare_type">Fare Type</string>
    <string name="taxi_capacity">Capacity</string>
    <string name="chat">Chat</string>
    <!--
    I’m in my way and would like to share my trip details with you, as currently riding with
    <Driver Name> in <Vehicle Name> (<Vehicle No.>) at exact geolocation of <latitude & longitude google map url>. \n
     Took my trip from <source location> to <destination location>

    -->
    <string name="share_content1">I am in my way and would like to share my trip details with you, as currently riding with </string>
    <string name="share_content2">in</string>
    <string name="share_ride_content3">at exact geolocation of</string>
    <string name="share_ride_content4">Took my trip from</string>
    <string name="to">to</string>
    <string name="gmap_link" translatable="false">https://maps.google.com/?q=</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_placeholder">Xx,. Xx,. Xx,.</string>
    <string name="select_location">Select Location</string>
    <string name="other">Other</string>
    <string name="cash">Cash</string>
    <string name="card">CARD</string>
    <string name="payable">Payable</string>
    <string name="reason">Reason</string>
    <string name="you_are_on_ride">You are on Ride</string>
    <string name="driver_has_accepted_your_request">Driver has Accepted  your Request</string>
    <string name="otp">OTP:</string>
    <string name="started" translatable="false">STARTED</string>
    <string name="searching" translatable="false">SEARCHING</string>
    <string name="driver_has_arrived_your_location">Driver has arrived your location</string>
    <string name="shareContent1">I am in my way and would like to share my trip details with you, as currently riding with </string>
    <string name="shareContent2">in</string>
    <string name="share_content3">at exact geolocation of</string>
    <string name="share_content4">Took my trip from</string>
    <string name="sharecontentTo">to</string>
    <string name="Select_the_Source_place">Select the Source place</string>
    <string name="Select_the_destination_place">Select the destination place</string>
    <string name="SelectTheServiceType">Select the Service Type</string>
    <string name="NoRoadMapAvailable">No road map available...</string>
    <string name="WayPointLlimitExceeded">Way point limit exceeded...</string>
    <string name="RoadMapLimitExceeded">Road map limit exceeded...</string>
    <string name="InvalidInputs">Invalid inputs...</string>
    <string name="MayBeInvalidAPIBillingPendingMethodDeprecated">MayBe invalid API/Billing pending/Method Deprecated...</string>
    <string name="TooManyRequestlimitExceeded">Too many request, limit exceeded...</string>
    <string name="DirectionsServiceNotEnabled">Directions service not enabled...</string>
    <string name="ServerError">Server Error...</string>
    <string name="BookFor">Book for</string>
    <string name="YourScheduleOn">Your Schedule on</string>
    <string name="BookForSomeone">Book for someone</string>
    <string name="BookForSomeoneDisabled">Book for someone disabled</string>
    <string name="map_pin">map_pin</string>
    <string name="tips">Tips</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="validTill">Valid Till:</string>
</resources>
